Seed authors data to the database.

--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -21,6 +21,10 @@
     "articles": {
       "via": "category",
       "collection": "article"
+    },
+    "authors": {
+      "via": "categories",
+      "collection": "author"
     }
   }
 }
