Update the database.

--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -2,11 +2,13 @@
   "kind": "collectionType",
   "collectionName": "categories",
   "info": {
-    "name": "category"
+    "name": "category",
+    "description": ""
   },
   "options": {
     "increments": true,
-    "timestamps": true
+    "timestamps": true,
+    "draftAndPublish": false
   },
   "attributes": {
     "name": {
@@ -19,12 +21,15 @@
       "required": true
     },
     "articles": {
-      "via": "category",
-      "collection": "article"
+      "collection": "article",
+      "via": "category"
     },
     "authors": {
-      "via": "categories",
-      "collection": "author"
+      "collection": "author",
+      "via": "categories"
+    },
+    "description": {
+      "type": "text"
     }
   }
 }
