--- a/api/lesson-plan/models/lesson-plan.settings.json
+++ b/api/lesson-plan/models/lesson-plan.settings.json
@@ -15,6 +15,10 @@
     },
     "description": {
       "type": "richtext"
+    },
+    "author": {
+      "via": "lesson_plans",
+      "model": "author"
     }
   }
 }
