--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -40,8 +40,8 @@
       "required": true
     },
     "category": {
-      "model": "category",
-      "via": "articles"
+      "via": "articles",
+      "model": "category"
     },
     "image": {
       "model": "file",
