--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "authors",
   "info": {
-    "name": "Author"
+    "name": "Author",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -17,9 +18,17 @@
       "type": "richtext"
     },
     "categories": {
-      "collection": "category",
       "via": "authors",
+      "collection": "category",
       "dominant": true
+    },
+    "transcriptions": {
+      "collection": "transcription",
+      "via": "author"
+    },
+    "lesson_plans": {
+      "collection": "lesson-plan",
+      "via": "author"
     }
   }
 }
