--- a/api/transcription/models/transcription.settings.json
+++ b/api/transcription/models/transcription.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "transcriptions",
   "info": {
-    "name": "Transcription"
+    "name": "Transcription",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -23,6 +24,10 @@
     },
     "content": {
       "type": "richtext"
+    },
+    "author": {
+      "via": "transcriptions",
+      "model": "author"
     }
   }
 }
