Add slug to the lesson plan model.

--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -22,8 +22,8 @@
       "via": "author"
     },
     "lessonPlans": {
-      "collection": "lesson-plan",
-      "via": "author"
+      "via": "author",
+      "collection": "lesson-plan"
     },
     "location": {
       "model": "author-location",
