Update strapi and add article model.

--- a/api/writer/models/writer.settings.json
+++ b/api/writer/models/writer.settings.json
@@ -23,6 +23,10 @@
     },
     "email": {
       "type": "string"
+    },
+    "articles": {
+      "via": "writer",
+      "collection": "article"
     }
   }
 }
