--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ HOST=0.0.0.0
 PORT=1337
 DATABASE_URL=https://your-app.herokuapp.com
 HEROKU_URL=https://your-app.herokuapp.com
+CLOUDINARY_NAME=cloudinary-name
+CLOUDINARY_KEY=cloudinary-key
+CLOUDINARY_SECRET=cloudinary-secret
