--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "strapi-plugin-graphql": "3.6.1",
     "strapi-plugin-upload": "3.6.1",
     "strapi-plugin-users-permissions": "3.6.1",
-    "strapi-provider-upload-cloudinary": "^3.6.8",
+    "strapi-provider-upload-cloudinary": "3.6.1",
     "strapi-utils": "3.6.1"
   },
   "author": {
