--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -12,10 +12,12 @@
   },
   "attributes": {
     "title": {
-      "type": "string"
+      "type": "string",
+      "unique": false
     },
     "body": {
-      "type": "richtext"
+      "type": "richtext",
+      "unique": false
     }
   }
 }
