--- a/api/footer/models/footer.settings.json
+++ b/api/footer/models/footer.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "footers",
   "info": {
-    "name": "Footer"
+    "name": "Footer",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -14,7 +15,7 @@
       "type": "string"
     },
     "description": {
-      "type": "string"
+      "type": "text"
     }
   }
 }
