Update content types.

--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -32,6 +32,9 @@
     "timePeriod": {
       "model": "time-period",
       "via": "authors"
+    },
+    "shortBiography": {
+      "type": "text"
     }
   }
 }
