--- a/api/featured-resource/models/featured-resource.settings.json
+++ b/api/featured-resource/models/featured-resource.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "featured_resources",
   "info": {
-    "name": "Featured Resource"
+    "name": "Featured Resource",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -11,24 +12,26 @@
   },
   "attributes": {
     "title": {
-      "type": "string"
+      "type": "string",
+      "required": true
     },
     "description": {
       "type": "text"
     },
     "url": {
-      "type": "string"
+      "type": "string",
+      "required": true
     },
     "image": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
         "files",
+        "images",
         "videos"
       ],
       "plugin": "upload",
-      "required": false,
+      "required": true,
       "pluginOptions": {}
     }
   }
