--- a/api/lesson-plan/models/lesson-plan.settings.json
+++ b/api/lesson-plan/models/lesson-plan.settings.json
@@ -27,6 +27,18 @@
     },
     "description": {
       "type": "text"
+    },
+    "files": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
