Update the author field.

--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -34,7 +34,12 @@
       "via": "authors"
     },
     "shortBiography": {
-      "type": "text"
+      "type": "text",
+      "maxLength": 500,
+      "required": true
+    },
+    "date": {
+      "type": "string"
     }
   }
 }
