Remove the digitizations type and update the lesson plan type.

--- a/api/lesson-plan/models/lesson-plan.settings.json
+++ b/api/lesson-plan/models/lesson-plan.settings.json
@@ -28,17 +28,8 @@
     "description": {
       "type": "text"
     },
-    "files": {
-      "collection": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false,
-      "pluginOptions": {}
+    "link": {
+      "type": "string"
     }
   }
 }
