Update the lesson plan type.

--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -21,10 +21,6 @@
       "collection": "transcription",
       "via": "author"
     },
-    "lessonPlans": {
-      "via": "author",
-      "collection": "lesson-plan"
-    },
     "location": {
       "model": "author-location",
       "via": "authors"
@@ -40,6 +36,10 @@
     },
     "date": {
       "type": "string"
+    },
+    "lessonPlans": {
+      "via": "authors",
+      "collection": "lesson-plan"
     }
   }
 }
