Add original text link field.

--- a/api/transcription/models/transcription.settings.json
+++ b/api/transcription/models/transcription.settings.json
@@ -29,6 +29,13 @@
     },
     "title": {
       "type": "string"
+    },
+    "originalTextLink": {
+      "type": "string"
+    },
+    "translation": {
+      "model": "translation",
+      "via": "transcription"
     }
   }
 }
