Add acknowledgement field and update transcription

--- a/api/transcription/models/transcription.settings.json
+++ b/api/transcription/models/transcription.settings.json
@@ -34,8 +34,11 @@
       "type": "string"
     },
     "translation": {
-      "model": "translation",
-      "via": "transcription"
+      "via": "transcription",
+      "model": "translation"
+    },
+    "originalText": {
+      "type": "string"
     }
   }
 }
