Allow the transcription to have many translations.

--- a/api/transcription/models/transcription.settings.json
+++ b/api/transcription/models/transcription.settings.json
@@ -33,9 +33,9 @@
     "originalTextLink": {
       "type": "string"
     },
-    "translation": {
-      "via": "transcription",
-      "model": "translation"
+    "translations": {
+      "collection": "translation",
+      "via": "transcription"
     },
     "originalText": {
       "type": "string"
