Add internalization and connect department to team members.

--- a/api/department/models/department.settings.json
+++ b/api/department/models/department.settings.json
@@ -29,7 +29,8 @@
       "required": false,
       "pluginOptions": {}
     },
-    "teamMembers": {
+    "team_members": {
+      "via": "department",
       "collection": "team-member"
     }
   }
