--- a/api/team-member/models/team-member.settings.json
+++ b/api/team-member/models/team-member.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "team_members",
   "info": {
-    "name": "Team Member"
+    "name": "Team Member",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -20,6 +21,7 @@
       "type": "string"
     },
     "department": {
+      "via": "team_members",
       "model": "department"
     },
     "picture": {
