--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@strapi/plugin-i18n": "^4.0.0",
     "dotenv": "^8.6.0",
     "knex": "0.21.18",
     "mime-types": "^2.1.32",
@@ -25,6 +26,7 @@
     "strapi-plugin-documentation": "3.6.8",
     "strapi-plugin-email": "3.6.8",
     "strapi-plugin-graphql": "3.6.8",
+    "strapi-plugin-i18n": "^3.6.8",
     "strapi-plugin-upload": "3.6.8",
     "strapi-plugin-users-permissions": "3.6.8",
     "strapi-provider-upload-cloudinary": "3.6.8",
