Add literary genre and theme fields.

--- a/api/transcription/models/transcription.settings.json
+++ b/api/transcription/models/transcription.settings.json
@@ -40,6 +40,14 @@
     },
     "originalText": {
       "type": "string"
+    },
+    "themes": {
+      "via": "transcriptions",
+      "collection": "theme"
+    },
+    "literary_genres": {
+      "via": "transcriptions",
+      "collection": "literary-genre"
     }
   }
 }
