Work on adding fields to the database.

--- a/api/transcription/models/transcription.settings.json
+++ b/api/transcription/models/transcription.settings.json
@@ -48,6 +48,9 @@
     "literary_genres": {
       "via": "transcriptions",
       "collection": "literary-genre"
+    },
+    "acknowledgement": {
+      "type": "text"
     }
   }
 }
