--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -44,6 +44,9 @@
     "translations": {
       "via": "author",
       "collection": "translation"
+    },
+    "acknowledgement": {
+      "type": "text"
     }
   }
 }
